<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="4dp"
    android:paddingEnd="16dp"
    android:paddingBottom="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/avatarCardView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/robot_avatar"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:contentDescription="@string/avatar_desc" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/messageCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxWidth="280dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="1dp"
        app:layout_constraintStart_toEndOf="@id/avatarCardView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/messageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/hello_i_m_ril_your_advanced_medical_assistant_how_can_i_help_with_your_breast_cancer_diagnostics_today"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_1_17_am"
        android:textColor="@color/grey_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/messageCardView"
        app:layout_constraintTop_toBottomOf="@id/messageCardView" />

    <TextView
        android:id="@+id/sourceText"
        android:layout_width="25dp"
        android:layout_height="17dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="11dp"
        android:text="Ril"
        android:textColor="#2962FF"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/messageCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarCardView"
        tools:ignore="HardcodedText,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>